# nodal

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
builds/MacOs/: README  nodal_dummy.c
builds/MacOs/Nodal.xcodeproj/: project.pbxproj
extra/algorithmicReverb/: ReverbTest.pd
extra/algorithmicReverb/include/: AllpassNode.h  PlainReverbNode.h  ReverbNode.h
extra/algorithmicReverb/src/: AllpassNode.cpp  PlainReverbNode.cpp  ReverbNode.cpp
extra/pannerNode/include/: AudioListener.h  PannerNode.h  StereoPannerNode.h  Vec3.h
extra/pannerNode/src/: PannerNode.cpp  StereoPannerNode.cpp
samples/openframeworks/1.synth/src/: Synth.hpp  ofApp.cpp  ofApp.h
samples/openframeworks/2.panning Box/: Synth.hpp  ofApp.cpp  ofApp.h
samples/openframeworks/2.panning Box/data/sounds/: SynthNote.aif
samples/openframeworks/2.panning Box/src/: Synth.hpp  ofApp.cpp  ofApp.h
