# Main CMakeLists for the nodal library
# Copyright: 2012-2015 Dinahmoe
# Author:    Alessandro Saccoia
# See LICENSE

CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT("Nodal")

IF (NOT DEFINED DM_ROOT)
  SET(DM_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF (NOT DEFINED DM_ROOT)

SET(CMAKE_MODULE_PATH ${DM_ROOT}/dm-cmake)

INCLUDE(SetTargetOptions)
INCLUDE(SetPlatformDefines)
INCLUDE(MergeStaticLibraries)
SET_PLATFORM_DEFINES()

ADD_SUBDIRECTORY(${DM_ROOT}/dm-audioengine "dm-audioengine")
ADD_SUBDIRECTORY(${DM_ROOT}/dm-audiomidi "dm-audiomidi")
ADD_SUBDIRECTORY(${DM_ROOT}/dm-dsp "dm-dsp")
ADD_SUBDIRECTORY(${DM_ROOT}/dm-log "dm-log")
ADD_SUBDIRECTORY(${DM_ROOT}/dm-utils "dm-utils")

SET(EXTRA_LIBRARIES "")

IF (DEFINED NODAL_USE_CONVOLVER)
  ADD_SUBDIRECTORY(${DM_ROOT}/dinahconv/library "dinahconv")
  SET(EXTRA_LIBRARIES "${EXTRA_LIBRARIES} dinahconv")
ENDIF (DEFINED NODAL_USE_CONVOLVER)

MERGE_STATIC_LIBS(nodal dm-utils dm-audioengine dm-dsp dm-log dm-audiomidi ${EXTRA_LIBRARIES} ${DM_AUDIOMIDI_EXTRA_LIBS})

IF(DEFINED NODAL_INSTALL_PATH)
  INSTALL(TARGETS nodal DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/lib)
  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/dm-dsp/DmDspConfig.hpp DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/include/)
  INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/dm-audioengine/AudioEngineConfig.hpp DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/include/)
  INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dm-audioengine/include/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/include/dm-audioengine/)
  INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dm-audiomidi/include/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/include/dm-audiomidi/)
  INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dm-dsp/include/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/include/dm-dsp/)
  INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dm-log/include/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/include/dm-log/)
  INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/dm-utils/include/ DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/${NODAL_INSTALL_PATH}/include/dm-utils/)
ENDIF(DEFINED NODAL_INSTALL_PATH)
